--- a/config.conf
+++ b/config.conf
@@ -11,6 +11,10 @@ rr-ttl-min 60
 rr-ttl-max 86400
 log-level warn
 server 192.168.1.1
+server 202.141.162.123
+server 101.6.6.6
+server 4.2.2.2
+server 4.2.2.1
 server 8.8.8.8 -blacklist-ip -check-edns
 server-tcp 119.29.29.29
 server-tcp 64.6.64.6
